<resources>
    <!-- Untranslated Strings -->
    <string name="action_return">Return</string>
    <string name="block_manager_label">Block manager: </string>
    <string name="members_label">Members: </string>
    <string name="meeting_label">Next meeting: </string>
    <string name="img_desc_blue_line">Blue line</string>
    <string name="img_desc_gold_line">Gold line</string>

    <string-array name="block_members_array">
        <item>Jon Snow</item>
        <item>Ygritte</item>
        <item>Tyrion Lannister</item>
        <item>The Hound</item>
        <item>Arya Stark</item>
        <item>Brienne of Tarth</item>
        <item>Theon Greyjoy</item>
    </string-array>

    <!-- General Use Strings  -->
    <string name="app_name">AdoptABlock</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_block">Your Block</string>
    <string name="title_map">Map</string>
    <string name="title_more">More</string>
    <string name="title_about_page">About</string>

    <string name="dialog_test">Testing 1,2,3</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="adopt_this_block">Adopt This Block!</string>
    <string name="change_block">Change block</string>
    <string name="accept">Accept</string>

    <!-- Strings related to welcome screen -->
    <string name="new_west_thank_you">Special thanks to the city of</string>
    <string name="adopt_logo_desc">The logo for AdoptABlock</string>
    <string name="new_west_logo_desc">The logo for the city of New Westminster</string>
    <string name="garbage_bin_image_desc">Image of a garbage can</string>
    <string name="city_image_desc">Image of a city in a circular form</string>
    <string name="group_image_desc">Image of a group of people</string>
    <string name="screen_2_message">AdoptABlock is a simple app with a simple purpose; to help communities keep their
city clean.</string>
    <string name="screen_3_message">Everyone assigned to a block will meet up at least once a month to clean up
the street of their choice</string>
    <string name="screen_4_message">And little by little, together we will keep New Westminster looking as
beautiful as it should!</string>
    <string name="get_started">Get Started!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_guest">Continue as guest</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!-- Strings related to registration -->
    <string name="email_confirmation">Confirm Email</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="postal_code">Postal Code</string>

    <!-- Strings to firebase paths -->
    <string name="user_path">users</string>
    <string name="block_path">block</string>
    <string name="block_name_path">block_name</string>

    <!-- String related to activity_block -->
    <string name="block_currently_adopted">Currently Adopted by: </string>
    <string name="block_street_name">New West Rd. + New West St.</string>
    <string name="block_owner_name">Owner Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="boardwalk_img_desc">Image of a boardwalk</string>

    <!-- Strings related to profile screen -->
    <string name="profile_header">Profile</string>
    <string name="profile_field1">User Name:</string>
    <string name="profile_field2">Email:</string>
    <string name="profile_field3">Block:</string>
    <string name="profile_sign_up_to_view">Sign in to view</string>

    <!-- Strings related to Maps -->
    <string name="adopted_by">Total Adopted By: </string>
    <string name="spots_available">Spots Available: </string>
    <string name="map_confirm">Confirm</string>
    <string name="confirm_message">Are you sure you want to adopt this block?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="map_warning">Warning</string>
    <string name="warning_message">You may only adopt one block. Would you like to adopt this block instead?</string>
    <string name="signin_message">Sign In/Register to adopt this block!</string>
    <string name="signin_prompt">Sign In/Register</string>
    <string name="signin_cancel">Cancel</string>
    <string name="cant_adopt">Oops! This block is full. Please select another block to adopt.</string>
    <string name="cant_adopt_ok">OK</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
