<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattullo_bridge"
    tools:context="com.example.gordiartur.adoptablock.AboutActivity"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="390dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparentWhite"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/title_about"
                android:textAlignment="center"
                android:textColor="@color/newWestDarkBlue"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/layout_line3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:contentDescription="@string/img_desc_gold_line"
                app:srcCompat="@drawable/gold_line" />

            <TextView
                android:id="@+id/about_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/screen_2_message"
                android:textColor="@color/newWestDarkBlue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/screen_3_message"
                android:textColor="@color/newWestDarkBlue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/screen_4_message"
                android:textColor="@color/newWestDarkBlue"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/layout_line_"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/img_desc_blue_line"
                app:srcCompat="@drawable/blue_line" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>