<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gordiartur.adoptablock.BlockActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <ImageView
        android:id="@+id/block_background_image"
        android:layout_width="392sp"
        android:layout_height="264sp"
        android:layout_marginBottom="196sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/your_block" />

    <TextView
        android:id="@+id/block_street_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:text="@string/block_street_name"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/block_background_image"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/block_currently_adopted_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:text="@string/block_currently_adopted"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/block_street_name_text"
        app:layout_constraintVertical_bias="0.47" />

    <TextView
        android:id="@+id/block_owner_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:text="@string/block_owner_name"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toEndOf="@+id/block_currently_adopted_text"
        app:layout_constraintTop_toBottomOf="@+id/block_street_name_text"
        app:layout_constraintVertical_bias="0.47" />

</android.support.constraint.ConstraintLayout>
